Makefile: Revamp setup of all things SDL.
Highlights:
*Building with msys2 can now take advantage of sdl-config and sdl2-config if present.
*Add a header check to error out if SDL_mixer's major version does not match SDL.
*Building with frameworks on OS X works again.

Notes:
*Those cross compiling, particularly targeting Windows, may need to invoke make with SDLCONFIG='' to avoid bringing in libs and headers from the host.

git-svn-id: http://svn.eduke32.com/eduke32@5778 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -88,7 +88,7 @@ ifeq ($(PLATFORM),DARWIN)
         ENGINE_EDITOR_OBJS += startosx.editor
     endif
     ifeq ($(SDL_TARGET),1)
-        ifeq (1,$(SDL_FRAMEWORK))
+        ifneq ($(SDL_FRAMEWORK),0)
             ENGINE_OBJS+=SDLMain
         endif
     endif
@@ -805,7 +805,7 @@ getdxdidf$(EXESUFFIX): $(ENGINE_OBJ)/getdxdidf.$o
 	$(RECIPE_IF) $(LINKER) -o $@ $^ $(COMMONFLAGS) $(LINKERFLAGS) $(LIBDIRS) $(LIBS) -ldinput $(RECIPE_RESULT_ONESTEP)
 makesdlkeytrans$(EXESUFFIX): $(ENGINE_OBJ)/makesdlkeytrans.$o
 	$(ONESTEP_STATUS)
-	$(RECIPE_IF) $(LINKER) -o $@ $^ $(COMMONFLAGS) $(LINKERFLAGS) $(LIBDIRS) $(LIBS) $(SDL_INCLUDES) $(RECIPE_RESULT_ONESTEP)
+	$(RECIPE_IF) $(LINKER) -o $@ $^ $(COMMONFLAGS) $(LINKERFLAGS) $(LIBDIRS) $(LIBS) $(RECIPE_RESULT_ONESTEP)
 arttool$(EXESUFFIX): $(ENGINE_OBJ)/arttool.$o
 	$(ONESTEP_STATUS)
 	$(RECIPE_IF) $(L_CXX) $(CXXONLYFLAGS) $(L_CXXONLYFLAGS) -o $@ $^ $(COMMONFLAGS) $(LINKERFLAGS) $(LIBDIRS) $(LIBS) $(STDCPPLIB) $(RECIPE_RESULT_ONESTEP)
