--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -138,6 +138,7 @@ ENGINE_OBJS= \
 	$(ENGINE_OBJ)\colmatch.$o \
 	$(ENGINE_OBJ)\engine.$o \
 	$(ENGINE_OBJ)\hash.$o \
+	$(ENGINE_OBJ)\palette.$o \
         $(ENGINE_OBJ)\glbuild.$o \
         $(ENGINE_OBJ)\texcache.$o \
         $(ENGINE_OBJ)\kplib.$o \
