Split 2d mode editor stuff that remained in engine.c into 2d.c.
git-svn-id: http://svn.eduke32.com/eduke32@5790 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -253,6 +253,7 @@
     <ClInclude Include="source\enet\include\enet\win32.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="build\src\2d.c" />
     <ClCompile Include="build\src\a-c.c" />
     <ClCompile Include="build\src\baselayer.c" />
     <ClCompile Include="build\src\build.c" />
