--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -137,6 +137,7 @@ ENGINE_OBJS= \
 	$(ENGINE_OBJ)\defs.$o \
 	$(ENGINE_OBJ)\colmatch.$o \
 	$(ENGINE_OBJ)\engine.$o \
+	$(ENGINE_OBJ)\2d.$o \
 	$(ENGINE_OBJ)\hash.$o \
 	$(ENGINE_OBJ)\palette.$o \
         $(ENGINE_OBJ)\glbuild.$o \
