Separate screen capture code from engine.c into screenshot.c
git-svn-id: http://svn.eduke32.com/eduke32@5791 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -159,7 +159,8 @@ ENGINE_OBJS= \
 	$(ENGINE_OBJ)\scriptfile.$o \
 	$(ENGINE_OBJ)\mutex.$o \
 	$(ENGINE_OBJ)\winbits.$o \
-	$(ENGINE_OBJ)\xxhash.$o
+	$(ENGINE_OBJ)\xxhash.$o \
+	$(ENGINE_OBJ)\screenshot.$o
 
 ENGINE_EDITOR_OBJS=$(ENGINE_OBJ)\build.$o \
 	$(ENGINE_OBJ)\startwin.editor.$o \
