Separate art tile related functions out from engine.c and into tiles.c
git-svn-id: http://svn.eduke32.com/eduke32@5801 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -296,6 +296,7 @@
     <ClCompile Include="build\src\startwin.editor.c" />
     <ClCompile Include="build\src\texcache.c" />
     <ClCompile Include="build\src\textfont.c" />
+    <ClCompile Include="build\src\tiles.c" />
     <ClCompile Include="build\src\voxmodel.c" />
     <ClCompile Include="build\src\winbits.c" />
     <ClCompile Include="build\src\winlayer.c" />
