--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -139,6 +139,7 @@ ENGINE_OBJS= \
 	$(ENGINE_OBJ)\engine.$o \
 	$(ENGINE_OBJ)\clip.$o \
 	$(ENGINE_OBJ)\2d.$o \
+        $(ENGINE_OBJ)\tiles.$o \
 	$(ENGINE_OBJ)\hash.$o \
 	$(ENGINE_OBJ)\palette.$o \
         $(ENGINE_OBJ)\glbuild.$o \
