--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="source\input.h" />
     <ClInclude Include="source\inv.h" />
     <ClInclude Include="source\jaudiolib\include\drivers.h" />
+    <ClInclude Include="source\jaudiolib\include\multivoc.h" />
     <ClInclude Include="source\lunatic\lunatic_game.h" />
     <ClInclude Include="source\lunatic\lunatic_m32.h" />
     <ClInclude Include="source\m32def.h" />
@@ -232,7 +233,6 @@
     <ClInclude Include="source\jaudiolib\src\driver_sdl.h" />
     <ClInclude Include="source\jaudiolib\include\fx_man.h" />
     <ClInclude Include="source\jaudiolib\src\linklist.h" />
-    <ClInclude Include="source\jaudiolib\src\multivoc.h" />
     <ClInclude Include="source\jaudiolib\include\music.h" />
     <ClInclude Include="source\jaudiolib\src\pitch.h" />
     <ClInclude Include="source\jmact\_control.h" />
