Massive readability cleanup of game code part 1. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5825 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="build\include\kplib.h" />
     <ClInclude Include="build\include\libdivide.h" />
     <ClInclude Include="build\include\lzwnew.h" />
+    <ClInclude Include="build\include\m32script.h" />
     <ClInclude Include="build\include\md4.h" />
     <ClInclude Include="build\include\mdsprite.h" />
     <ClInclude Include="build\include\mmulti.h" />
