Makefile: Only apply $(ARCH) processing code on Macs.
git-svn-id: http://svn.eduke32.com/eduke32@5864 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -321,7 +321,7 @@ ifeq ($(PLATFORM),WINDOWS)
     WINLIB?=/$(BITS)
 else ifeq ($(PLATFORM),WII)
     IMPLICIT_ARCH=ppc
-else
+else ifeq ($(PLATFORM),DARWIN)
     ifeq (1,$(BUILD32_ON_64))
         ifeq ($(ARCH),)
             override ARCH:=-arch i386
