Support building without a startup window through the Makefile. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5928 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -510,8 +510,12 @@ ifeq ($(PLATFORM),WINDOWS)
     endif
     LIBS += -lFLAC -lvorbisfile -lvorbis -logg
     LIBDIRS += -L$(AUDIOLIB_ROOT)/third-party/Windows/lib$(WINLIB)
-    DUKE3D_GAME_OBJS+= gameres winbits startwin.game
-    DUKE3D_EDITOR_OBJS+= buildres
+    ifeq ($(STARTUP_WINDOW),1)
+        DUKE3D_GAME_OBJS+= gameres winbits startwin.game
+        DUKE3D_EDITOR_OBJS+= buildres 
+    else
+        DUKE3D_GAME_OBJS+= winbits
+    endif
     ifeq ($(MIXERTYPE),WIN)
         LIBS+= -ldsound
         MIDI_OBJS=music midi mpu401
