Makefile: Fix STARTUP_WINDOW=0 on Windows so that the resource objects are built, but the editor's startup window is not. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5943 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -102,7 +102,9 @@ ifeq ($(PLATFORM),DARWIN)
 endif
 ifeq ($(PLATFORM),WINDOWS)
     ENGINE_OBJS+= winbits
-    ENGINE_EDITOR_OBJS+= startwin.editor
+    ifeq ($(STARTUP_WINDOW),1)
+        ENGINE_EDITOR_OBJS+= startwin.editor
+    endif
 endif
 ifeq ($(PLATFORM),WII)
     ENGINE_OBJS+= wiibits
@@ -512,11 +514,10 @@ ifeq ($(PLATFORM),WINDOWS)
     endif
     LIBS += -lFLAC -lvorbisfile -lvorbis -logg
     LIBDIRS += -L$(AUDIOLIB_ROOT)/third-party/Windows/lib$(WINLIB)
+    DUKE3D_GAME_OBJS+= gameres winbits
+    DUKE3D_EDITOR_OBJS+= buildres
     ifeq ($(STARTUP_WINDOW),1)
-        DUKE3D_GAME_OBJS+= gameres winbits startwin.game
-        DUKE3D_EDITOR_OBJS+= buildres 
-    else
-        DUKE3D_GAME_OBJS+= winbits
+        DUKE3D_GAME_OBJS+= startwin.game
     endif
     ifeq ($(MIXERTYPE),WIN)
         LIBS+= -ldsound
