Remove $(ARCH) from COMMONFLAGS, except under Darwin. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5983 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -261,7 +261,7 @@ ifndef LTO
     endif
 endif
 
-COMMONFLAGS=$(ARCH)
+COMMONFLAGS=
 COMPILERFLAGS=
 
 ifeq ($(PACKAGE_REPOSITORY),0)
@@ -378,6 +378,8 @@ ifeq ($(PLATFORM),DARWIN)
             COMMONFLAGS += $(F_NO_STACK_PROTECTOR)
         endif
     endif
+
+    COMMONFLAGS += $(ARCH)
 endif
 
 
