Support compiling with a custom application name with make APPNAME="something". DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@6008 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -170,6 +170,7 @@ APPLE_FRAMEWORKS ?=/Library/Frameworks
 #  NOASM          - disables the use of inline assembly pragmas
 #  LINKED_GTK     - enables compile-time linkage to GTK
 #
+APPNAME ?= EDuke32
 POLYMER = 1
 USE_OPENGL = 1
 NOASM = 0
@@ -669,6 +670,8 @@ ifneq (0,$(DMALLOC))
     LIBS+= -ldmalloc
     COMPILERFLAGS+= -DDMALLOC
 endif
+
+COMPILERFLAGS+= -DAPPNAME=\"$(APPNAME)\"
 
 # may be overridden
 EXESUFFIX=
