Add APPBASENAME to Makefile.common, controlling the resulting binary's default .cfg file name and .log file name. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@6010 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -676,7 +676,7 @@ ifneq (0,$(STANDALONE))
     COMPILERFLAGS+= -DEDUKE32_STANDALONE
 endif
 
-COMPILERFLAGS+= -DAPPNAME=\"$(APPNAME)\"
+COMPILERFLAGS+= -DAPPNAME=\"$(APPNAME)\" -DAPPBASENAME=\"$(APPBASENAME)\"
 
 # may be overridden
 EXESUFFIX=
