Split DROIDMENU #define into EDUKE32_SIMPLE_MENU and EDUKE32_ANDROID_MENU. EDUKE32_ANDROID_MENU depends on EDUKE32_SIMPLE_MENU being set, and EDUKE32_SIMPLE_MENU does what you would expect: simplifies the menu options available by removing things not typically found in shipping games. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@6013 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -189,6 +189,7 @@ else
 endif
 NETCODE ?= 1
 STARTUP_WINDOW ?= 1
+SIMPLE_MENU ?= 0
 
 LUNATIC ?= 0
 USE_LUAJIT_2_1 ?= 0
@@ -653,6 +654,10 @@ endif
 
 ifneq (0,$(STARTUP_WINDOW))
     COMPILERFLAGS+= -DSTARTUP_WINDOW
+endif
+
+ifneq (0,$(SIMPLE_MENU))
+    COMPILERFLAGS+= -DEDUKE32_SIMPLE_MENU
 endif
 
 ifneq (0,$(HAVE_VORBIS))
