Makefile: Use the override keyword when implicitly disabling Polymer and libvpx when USE_OPENGL=0.
git-svn-id: http://svn.eduke32.com/eduke32@6024 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -198,8 +198,8 @@ USE_LUAJIT_2_1 ?= 0
 USE_ASM64 ?= 0
 
 ifeq (0,$(USE_OPENGL))
-    POLYMER = 0
-    USE_LIBVPX = 0
+    override POLYMER = 0
+    override USE_LIBVPX = 0
 endif
 
 # Debugging/Build options
